rank-exporter/deploy/grafana/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  replicas: 2
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:8.4.4
        livenessProbe:
          httpGet:
            path: "/api/health" 
            port: 3000
        readinessProbe:
          httpGet:
            path: "/api/health" 
            port: 3000
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
